lsdo_optimizer to modopt inside importing files. First working version of docs

--- a/docs/docs/getting_started/simple_example.mdx
+++ b/docs/docs/getting_started/simple_example.mdx
@@ -18,7 +18,7 @@ $x_{k+1} = x_{k} - \nabla f(x_k)$
 import numpy as np
 import time
 
-from lsdo_optimizer.api import Optimizer
+from modopt.api import Optimizer
 
 
 class SteepestDescent(Optimizer):
