--- a/docs/docs/standard_optimization_algorithms.mdx
+++ b/docs/docs/standard_optimization_algorithms.mdx
@@ -7,7 +7,7 @@ sidebar_position: 4
 
 Welcome to the documentation for modOpt -- a framework for developing and benchmarking optimizers.
 
-Use the sidebar to the left to get started using or contributing to LSDO-ODF.
+Use the sidebar to the left to get started using or contributing to modOpt.
 
 If you have any questions, please ask a question on
 [Stack Overflow](https://stackoverflow.com) using the `modopt` tag.
