First tutorial page added

--- a/docs/docs/installation_instructions.mdx
+++ b/docs/docs/installation_instructions.mdx
@@ -5,6 +5,27 @@ sidebar_position: 2
 
 # Installation Instructions
 
+## Dependencies
+
+### Array manager
+
+To install ```array_manager```, first clone the repository and install using pip.
+On the terminal or command line, run
+
+```sh
+git clone https://github.com/anugrahjo/array_manager.git
+pip install -e array_manager/
+```
+
+:::danger Note
+
+ModOpt relies heavily on numpy and scipy packages. Please install them from 
+**[numpy](https://numpy.org/install/)** and **[scipy](https://www.scipy.org/install.html)** if you are new to it.
+
+:::
+
+## Installing modOpt
+
 To install ```modopt```, first clone the repository and install using pip.
 On the terminal or command line, run
 
@@ -13,7 +34,10 @@ git clone https://github.com/lsdolab/modopt.git
 pip install -e modopt/
 ```
 
-# Updating
+To test if your installation was successful, run oooo from ooo .file
+
+
+## Updating
 
 To update ```modopt``` to the latest version, run on the terminal or command line 
 
