--- a/docs/src/pages/faq.mdx
+++ b/docs/src/pages/faq.mdx
@@ -10,25 +10,25 @@ title: Frequently Asked Questions
 
 
 
-## What is SODE?
+<!-- ## What is modOpt?
 
 
 ## What is the goal of this project?
 
 
-## Why use SODE?
+## Why use modOpt?
 
 
 ## Do I need to use the command line to compile my program?
 
 
 
-## Who is SODE for?
+## Who is modOpt for?
 
 
-##  Who uses SODE?
+##  Who uses modOpt?
 
-## How do I install ``sode``?
+## How do I install ``modopt``?
 
 
-Please follow the instructions on PAGE.
+Please follow the instructions on PAGE. -->
