--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -4,7 +4,17 @@ sidebar_position: 1
 ---
 
 # Introduction
-This webpage serves as the documentation for modOpt - a framework for developing and benchmarking gradient-based optimizers.
+This webpage serves as the documentation for **modOpt** - a modular development environment and library optimizers.
+
+ModOpt is primarily developed for **easy and fast** development of gradient-based optimization algorithms through modular construction of algorithms
+and testing with built-in problems and interfaces with test-suites.
+
+**Benchmarking** with built-in standard algorithms or interfaced external optimizer libraries are also possible.
+
+**Custom optimization algorithms** can be developed in a modular fashion using the **Optimizer()** class in modOpt.
+
+**Custom optimization problems** to be solved with any of the optimizers available can be written using the **Problem()** class in modOpt.
+Optimization problems written in [csdl](https://lsdolab.github.io/csdl/) modeling language is also supported.
 
 Use the sidebar to the left to navigate through the documentation for modOpt.
 
