Doc page added for Using available optimizers, outputs can be custom defined by the optimizer

--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -14,7 +14,7 @@ and testing with built-in problems and interfaces with test-suites.
 **Custom optimization algorithms** can be developed in a modular fashion using the **Optimizer()** class in modOpt.
 
 **Custom optimization problems** to be solved with any of the optimizers available can be written using the **Problem()** class in modOpt.
-Optimization problems written in [csdl](https://lsdolab.github.io/csdl/) modeling language is also supported.
+Optimization problems written in **[csdl](https://lsdolab.github.io/csdl/)** modeling language is also supported.
 
 Use the sidebar to the left to navigate through the documentation for modOpt.
 
