--- a/docs/docs/installation_instructions.mdx
+++ b/docs/docs/installation_instructions.mdx
@@ -7,7 +7,7 @@ sidebar_position: 2
 
 ## Dependencies
 
-### Array manager
+### array_manager
 
 To install ```array_manager```, first clone the repository and install using pip.
 On the terminal or command line, run
@@ -19,10 +19,16 @@ pip install -e array_manager/
 
 :::danger Note
 
-ModOpt relies heavily on numpy and scipy packages. Please install them from 
+ModOpt relies on numpy and scipy packages. Please install them from 
 **[numpy](https://numpy.org/install/)** and **[scipy](https://www.scipy.org/install.html)** if you are new to it.
 
 :::
+
+### pycutest 
+
+Install pycutest **only** if you need to use CUTEst test-suite for benchmarking.
+You can find the installation instructions **[here](https://jfowkes.github.io/pycutest/_build/html/install.html)**.
+
 
 ## Installing modOpt
 
@@ -34,7 +40,7 @@ git clone https://github.com/lsdolab/modopt.git
 pip install -e modopt/
 ```
 
-To test if your installation was successful, run oooo from ooo .file
+To test if your installation was successful, run `simple_example.py` in `modopt/modopt/examples`.
 
 
 ## Updating
