--- a/docs/docs/installation_instructions.mdx
+++ b/docs/docs/installation_instructions.mdx
@@ -14,6 +14,7 @@ On the terminal or command line, run
 
 ```sh
 git clone https://github.com/anugrahjo/array_manager.git
+git checkout modopt
 pip install -e array_manager/
 ```
 
