--- a/docs/docs/tutorial/simple_example.mdx
+++ b/docs/docs/tutorial/simple_example.mdx
@@ -23,8 +23,8 @@ The problem is written in modOpt using the **Problem()** class as follows:
 
 ```py
 import numpy as np
-
 from modopt.api import Problem
+
 
 class X4(Problem):
     def initialize(self, ):
@@ -37,22 +37,16 @@ class X4(Problem):
                                   shape=(2, ),
                                   vals=np.array([.3, .3]))
 
-        # Name the objective of your problem (optional)
-        self.name_objective('obj')
-
     def setup_derivatives(self):
         # Declare objective gradient and its shape
-        self.declare_objective_gradient(
-            wrt='x',
-            shape=(2, ),
-        )
+        self.declare_objective_gradient(wrt='x', )
 
     # Compute the value of the objective with given design variable values
-    def compute_objective(self, x):
-        return np.sum(x**4)
+    def compute_objective(self, dvs, obj):
+        obj[0] = np.sum(dvs['x']**4)
 
-    def compute_objective_gradient(self, x):
-        return 4 * x**3
+    def compute_objective_gradient(self, dvs, grad):
+        grad['x'] = 4 * dvs['x']**3
 ```
 
 ## Develop/Build your optimization algorithm
@@ -77,20 +71,20 @@ Given an initial guess $x_0$, we can write an optimizer using the steepest desce
 ```py
 import numpy as np
 import time
-
 from modopt.api import Optimizer
 
 
 class SteepestDescent(Optimizer):
     def initialize(self):
-        # Name your algorithm
-        self.solver = 'steepest_descent'
 
-        self.obj = self.problem.compute_objective
-        self.grad = self.problem.compute_objective_gradient
+        # Name your algorithm
+        self.solver_name = 'steepest_descent'
+
+        self.obj = self.problem.objective
+        self.grad = self.problem.objective_gradient
 
         self.options.declare('opt_tol', types=float)
-        
+
         # Specify format of outputs available from your optimizer after each iteration
         self.default_outputs_format = {
             'itr': int,
@@ -100,8 +94,8 @@ class SteepestDescent(Optimizer):
             'opt': float,
             'time': float,
         }
-        
-        # Enable user to specify, as a list, which among the available outputs 
+
+        # Enable user to specify, as a list, which among the available outputs
         # need to be stored in memory and written to output files
         self.options.declare('outputs',
                              types=list,
@@ -109,7 +103,7 @@ class SteepestDescent(Optimizer):
 
     def solve(self):
         nx = self.problem.nx
-        x0 = x0 = self.problem.x.get_data()
+        x = self.problem.x.get_data()
         opt_tol = self.options['opt_tol']
         max_itr = self.options['max_itr']
 
@@ -119,7 +113,7 @@ class SteepestDescent(Optimizer):
         start_time = time.time()
 
         # Setting intial values for initial iterates
-        x_k = x0 * 1.
+        x_k = x * 1.
         f_k = obj(x_k)
         g_k = grad(x_k)
 
@@ -131,7 +125,7 @@ class SteepestDescent(Optimizer):
 
         # Initializing outputs
         self.update_outputs(itr=0,
-                            x=x0,
+                            x=x_k,
                             obj=f_k,
                             opt=opt,
                             time=time.time() - start_time)
@@ -144,6 +138,7 @@ class SteepestDescent(Optimizer):
             # >>>>>>>>>>>>>>>>>>>>>
 
             p_k = -g_k
+
             x_k += p_k
             f_k = obj(x_k)
             g_k = grad(x_k)
@@ -158,9 +153,9 @@ class SteepestDescent(Optimizer):
                                 x=x_k,
                                 obj=f_k,
                                 opt=opt,
-                                time=time.time() - itr_start)
+                                time=time.time() - start_time)
 
-        # Run post-processing from the Optimizer() base class
+        # Run post-processing for the Optimizer() base class
         self.run_post_processing()
 
         end_time = time.time()
@@ -185,7 +180,7 @@ max_itr = 1000
 prob = X4()
 
 # Set up your optimizer with your problem and pass in optimizer parameters
-# And declare outputs (np.ndarray) and their dimension (1 or 2)
+# And declare outputs to be stored
 optimizer = SteepestDescent(prob,
                             opt_tol=opt_tol,
                             max_itr=max_itr,
@@ -200,7 +195,7 @@ optimizer.solve()
 # Print results of optimization (summary_table contains information from each iteration)
 optimizer.print_results(summary_table=True)
 
-# Print any output that were declared
+# Print any output that was declared
 # Since the arrays are long, here we only print the last entry and
 # verify it with the print_results() above
 
