Problem objective needs to be added with a name as a dictionary now, Problem() class now has _compute_objective() instead of just objective() to be used by the optimizer. NB: EArlier commit only added one file

--- a/docs/docs/tutorial/simple_example.mdx
+++ b/docs/docs/tutorial/simple_example.mdx
@@ -36,6 +36,7 @@ class X4(Problem):
         self.add_design_variables('x',
                                   shape=(2, ),
                                   vals=np.array([.3, .3]))
+        self.add_objective('f')
 
     def setup_derivatives(self):
         # Declare objective gradient and its shape
@@ -43,7 +44,7 @@ class X4(Problem):
 
     # Compute the value of the objective with given design variable values
     def compute_objective(self, dvs, obj):
-        obj[0] = np.sum(dvs['x']**4)
+        obj['f'] = np.sum(dvs['x']**4)
 
     def compute_objective_gradient(self, dvs, grad):
         grad['x'] = 4 * dvs['x']**3
@@ -80,8 +81,8 @@ class SteepestDescent(Optimizer):
         # Name your algorithm
         self.solver_name = 'steepest_descent'
 
-        self.obj = self.problem.objective
-        self.grad = self.problem.objective_gradient
+        self.obj = self.problem._compute_objective
+        self.grad = self.problem._compute_objective_gradient
 
         self.options.declare('opt_tol', types=float)
 
