Minor bug fixed in Standard algs, installation instructions and other cosmetic changes to docs, Rosenbrock problem updated

--- a/docs/docs/installation_instructions.mdx
+++ b/docs/docs/installation_instructions.mdx
@@ -13,9 +13,7 @@ To install ```array_manager```, first clone the repository and install using pip
 On the terminal or command line, run
 
 ```sh
-git clone https://github.com/anugrahjo/array_manager.git
-git checkout modopt
-pip install -e array_manager/
+pip install git+https://github.com/anugrahjo/array_manager.git@modopt
 ```
 
 :::danger Note
@@ -37,8 +35,7 @@ To install ```modopt```, first clone the repository and install using pip.
 On the terminal or command line, run
 
 ```sh
-git clone https://github.com/lsdolab/modopt.git
-pip install -e modopt/
+pip install git+https://github.com/lsdolab/modopt.git
 ```
 
 To test if your installation was successful, run `simple_example.py` in `modopt/modopt/examples`.
