Change API- replace "from modopt.api, modopt.csdl_library", etc. with from modopt. Problem() class moved into core/ from utils/

--- a/old_docs/docs/building_custom_optimizer.mdx
+++ b/old_docs/docs/building_custom_optimizer.mdx
@@ -25,7 +25,7 @@ Given an initial guess $x_0$, we can write an optimizer using the steepest desce
 import numpy as np
 import time
 
-from modopt.api import Optimizer
+from modopt import Optimizer
 
 
 class SteepestDescent(Optimizer):
