--- a/old_docs/docs/optimizers_available/SLSQP.mdx
+++ b/old_docs/docs/optimizers_available/SLSQP.mdx
@@ -11,7 +11,7 @@ You need to import the optimizer as shown in the following code
 (here we use the SLSQP optimizer):
 
 ```py
-from modopt.scipy_library import SLSQP
+from modopt import SLSQP
 ```
 
 Options are available
