--- a/old_docs/docs/optimizers_available/SQP.mdx
+++ b/old_docs/docs/optimizers_available/SQP.mdx
@@ -10,5 +10,5 @@ except when importing the optimizer.
 You need to import the optimizer as shown in the following code:
 
 ```py
-from modopt.optimization_algorithms import SQP
+from modopt import SQP
 ```
