--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from modopt.api import Problem\n",
+    "from modopt import Problem\n",
     "\n",
     "\n",
     "class X4(Problem):\n",
@@ -91,7 +91,7 @@
    "source": [
     "import numpy as np\n",
     "import time\n",
-    "from modopt.api import Optimizer\n",
+    "from modopt import Optimizer\n",
     "\n",
     "\n",
     "class SteepestDescent(Optimizer):\n",
