--- a/old_docs/docs/optimizers_available/SNOPT.mdx
+++ b/old_docs/docs/optimizers_available/SNOPT.mdx
@@ -10,7 +10,7 @@ except when importing the optimizer.
 You need to import the optimizer as shown in the following code:
 
 ```py
-from modopt.snopt_library import SNOPT
+from modopt import SNOPT
 ```
 
 Options are available
