--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -107,7 +107,7 @@
     "        self.options.declare('opt_tol', default=1e-5, types=float)\n",
     "\n",
     "        # Specify format of outputs available from your optimizer after each iteration\n",
-    "        self.default_outputs_format = {\n",
+    "        self.available_outputs = {\n",
     "            'itr': int,\n",
     "            'obj': float,\n",
     "            # for arrays from each iteration, shapes need to be declared\n",
