--- a/old_docs/docs/tutorial/simple_example.mdx
+++ b/old_docs/docs/tutorial/simple_example.mdx
@@ -88,7 +88,7 @@ class SteepestDescent(Optimizer):
         self.options.declare('opt_tol', default=1e-5, types=float)
 
         # Specify format of outputs available from your optimizer after each iteration
-        self.default_outputs_format = {
+        self.available_outputs = {
             'itr': int,
             'obj': float,
             # for arrays from each iteration, shapes need to be declared
