--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "    def solve(self):\n",
     "        nx = self.problem.nx\n",
-    "        x = self.problem.x.get_data()\n",
+    "        x = self.problem.x0\n",
     "        opt_tol = self.options['opt_tol']\n",
     "        max_itr = self.options['max_itr']\n",
     "\n",
@@ -218,7 +218,7 @@
     "                            outputs=['itr', 'obj', 'x', 'opt', 'time'])\n",
     "\n",
     "# Check first derivatives at the initial guess, if needed\n",
-    "optimizer.check_first_derivatives(prob.x.get_data())\n",
+    "optimizer.check_first_derivatives(prob.x0)\n",
     "\n",
     "# Solve your optimization problem\n",
     "optimizer.solve()\n",
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
