--- a/old_docs/docs/optimizers_available/standard_algorithms.mdx
+++ b/old_docs/docs/optimizers_available/standard_algorithms.mdx
@@ -52,7 +52,7 @@ optimizer = SteepestDescent(prob,opt_tol=tol,max_itr=max_itr)
 # optimizer = Newton(prob,opt_tol=tol,max_itr=max_itr)
 # optimizer = QuasiNewton(prob,opt_tol=tol,max_itr=max_itr)
 
-optimizer.check_first_derivatives(prob.x.get_data())
+optimizer.check_first_derivatives(prob.x0)
 optimizer.solve()
 optimizer.print_results(summary_table=True)
 ```
