--- a/old_docs/docs/tutorial/simple_example.mdx
+++ b/old_docs/docs/tutorial/simple_example.mdx
@@ -105,7 +105,7 @@ class SteepestDescent(Optimizer):
 
     def solve(self):
         nx = self.problem.nx
-        x = self.problem.x.get_data()
+        x = self.problem.x0
         opt_tol = self.options['opt_tol']
         max_itr = self.options['max_itr']
 
@@ -189,7 +189,7 @@ optimizer = SteepestDescent(prob,
                             outputs=['itr', 'obj', 'x', 'opt', 'time'])
 
 # Check first derivatives at the initial guess, if needed
-optimizer.check_first_derivatives(prob.x.get_data())
+optimizer.check_first_derivatives(prob.x0)
 
 # Solve your optimization problem
 optimizer.solve()
