--- a/old_docs/docs/tutorial/simple_example.mdx
+++ b/old_docs/docs/tutorial/simple_example.mdx
@@ -84,7 +84,7 @@ class SteepestDescent(Optimizer):
         self.obj = self.problem._compute_objective
         self.grad = self.problem._compute_objective_gradient
 
-        self.options.declare('max_itr', default=1000, types=int)
+        self.options.declare('maxiter', default=1000, types=int)
         self.options.declare('opt_tol', default=1e-5, types=float)
 
         # Specify format of outputs available from your optimizer after each iteration
@@ -107,7 +107,7 @@ class SteepestDescent(Optimizer):
         nx = self.problem.nx
         x = self.problem.x0
         opt_tol = self.options['opt_tol']
-        max_itr = self.options['max_itr']
+        maxiter = self.options['maxiter']
 
         obj = self.obj
         grad = self.grad
@@ -132,7 +132,7 @@ class SteepestDescent(Optimizer):
                             opt=opt,
                             time=time.time() - start_time)
 
-        while (opt > opt_tol and itr < max_itr):
+        while (opt > opt_tol and itr < maxiter):
             itr_start = time.time()
             itr += 1
 
@@ -177,7 +177,7 @@ Default values will be assumed if the optimizer parameters are not passed in.
 # Set your optimality tolerance
 opt_tol = 1E-8
 # Set maximum optimizer iteration limit
-max_itr = 100
+maxiter = 100
 
 prob = X4()
 
@@ -185,7 +185,7 @@ prob = X4()
 # And declare outputs to be stored
 optimizer = SteepestDescent(prob,
                             opt_tol=opt_tol,
-                            max_itr=max_itr,
+                            maxiter=maxiter,
                             outputs=['itr', 'obj', 'x', 'opt', 'time'])
 
 # Check first derivatives at the initial guess, if needed
