--- a/old_docs/docs/building_custom_optimizer.mdx
+++ b/old_docs/docs/building_custom_optimizer.mdx
@@ -43,7 +43,7 @@ class SteepestDescent(Optimizer):
         nx = self.problem.nx
         x0 = self.problem.x0
         opt_tol = self.options['opt_tol']
-        max_itr = self.options['max_itr']
+        maxiter = self.options['maxiter']
 
         obj = self.obj
         grad = self.grad
@@ -66,7 +66,7 @@ class SteepestDescent(Optimizer):
                             opt=opt,
                             time=time.time() - start_time)
 
-        while (opt > opt_tol and itr < max_itr):
+        while (opt > opt_tol and itr < maxiter):
             itr_start = time.time()
             itr += 1
 
