--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -192,8 +192,15 @@
     "        # Run post-processing for the Optimizer() base class\n",
     "        self.run_post_processing()\n",
     "\n",
-    "        end_time = time.time()\n",
-    "        self.total_time = end_time - start_time"
+    "        self.total_time = time.time() - start_time\n",
+    "\n",
+    "        self.results = {\n",
+    "            'x': x_k,\n",
+    "            'obj': f_k,\n",
+    "            'opt': opt,\n",
+    "            'itr': itr,\n",
+    "            'time': self.total_time\n",
+    "        }"
    ]
   },
   {
@@ -238,7 +245,7 @@
       "\t itr           : 100\n",
       "\t obj           : 2.830456199167557e-06\n",
       "\t opt           : 0.00023211051832047348\n",
-      "\t time          : 0.18148422241210938\n",
+      "\t time          : 0.10356998443603516\n",
       "\t =====================================\n",
       "\n",
       "\n",
@@ -246,113 +253,113 @@
       "                       modOpt summary table:                        \n",
       "====================================================================\n",
       "             itr              obj              opt             time \n",
-      "               0     1.620000E-02     1.527351E-01     1.070499E-04 \n",
-      "               1     2.717909E-03     4.003858E-02     5.522966E-03 \n",
-      "               2     1.435827E-03     2.481013E-02     7.575035E-03 \n",
-      "               3     9.123600E-04     1.765742E-02     9.542942E-03 \n",
-      "               4     6.383038E-04     1.350744E-02     1.230001E-02 \n",
-      "               5     4.744946E-04     1.081374E-02     1.476216E-02 \n",
-      "               6     3.679275E-04     8.935609E-03     1.679111E-02 \n",
-      "               7     2.943483E-04     7.558728E-03     1.861715E-02 \n",
-      "               8     2.412398E-04     6.510874E-03     2.027702E-02 \n",
-      "               9     2.015609E-04     5.689934E-03     2.191281E-02 \n",
-      "              10     1.710840E-04     5.031639E-03     2.349710E-02 \n",
-      "              11     1.471372E-04     4.493599E-03     2.613688E-02 \n",
-      "              12     1.279604E-04     4.046775E-03     4.388309E-02 \n",
-      "              13     1.123533E-04     3.670640E-03     4.898405E-02 \n",
-      "              14     9.947358E-05     3.350297E-03     5.177617E-02 \n",
-      "              15     8.871518E-05     3.074687E-03     6.101799E-02 \n",
-      "              16     7.963259E-05     2.835441E-03     6.256604E-02 \n",
-      "              17     7.189216E-05     2.626114E-03     6.461120E-02 \n",
-      "              18     6.523983E-05     2.441671E-03     6.748509E-02 \n",
-      "              19     5.947928E-05     2.278121E-03     6.903100E-02 \n",
-      "              20     5.445680E-05     2.132267E-03     7.161403E-02 \n",
-      "              21     5.005061E-05     2.001518E-03     7.442212E-02 \n",
-      "              22     4.616319E-05     1.883755E-03     7.626700E-02 \n",
-      "              23     4.271564E-05     1.777226E-03     7.904601E-02 \n",
-      "              24     3.964361E-05     1.680476E-03     8.027816E-02 \n",
-      "              25     3.689416E-05     1.592285E-03     8.189607E-02 \n",
-      "              26     3.442338E-05     1.511620E-03     8.341503E-02 \n",
-      "              27     3.219464E-05     1.437607E-03     8.484507E-02 \n",
-      "              28     3.017715E-05     1.369497E-03     9.033704E-02 \n",
-      "              29     2.834488E-05     1.306648E-03     9.181499E-02 \n",
-      "              30     2.667573E-05     1.248504E-03     9.520793E-02 \n",
-      "              31     2.515080E-05     1.194583E-03     9.687090E-02 \n",
-      "              32     2.375385E-05     1.144466E-03     9.865499E-02 \n",
-      "              33     2.247088E-05     1.097786E-03     9.981918E-02 \n",
-      "              34     2.128977E-05     1.054219E-03     1.008389E-01 \n",
-      "              35     2.019996E-05     1.013480E-03     1.018820E-01 \n",
-      "              36     1.919224E-05     9.753190E-04     1.036623E-01 \n",
-      "              37     1.825852E-05     9.395107E-04     1.048789E-01 \n",
-      "              38     1.739172E-05     9.058564E-04     1.064060E-01 \n",
-      "              39     1.658555E-05     8.741779E-04     1.079099E-01 \n",
-      "              40     1.583446E-05     8.443159E-04     1.088831E-01 \n",
-      "              41     1.513354E-05     8.161272E-04     1.099451E-01 \n",
-      "              42     1.447839E-05     7.894827E-04     1.109309E-01 \n",
-      "              43     1.386509E-05     7.642661E-04     1.120169E-01 \n",
-      "              44     1.329015E-05     7.403720E-04     1.131332E-01 \n",
-      "              45     1.275042E-05     7.177050E-04     1.139231E-01 \n",
-      "              46     1.224307E-05     6.961781E-04     1.149480E-01 \n",
-      "              47     1.176556E-05     6.757124E-04     1.157582E-01 \n",
-      "              48     1.131557E-05     6.562357E-04     1.165590E-01 \n",
-      "              49     1.089103E-05     6.376822E-04     1.173410E-01 \n",
-      "              50     1.049005E-05     6.199915E-04     1.183341E-01 \n",
-      "              51     1.011091E-05     6.031083E-04     1.195982E-01 \n",
-      "              52     9.752052E-06     5.869816E-04     1.215830E-01 \n",
-      "              53     9.412042E-06     5.715647E-04     1.258631E-01 \n",
-      "              54     9.089584E-06     5.568144E-04     1.274869E-01 \n",
-      "              55     8.783485E-06     5.426910E-04     1.290450E-01 \n",
-      "              56     8.492654E-06     5.291576E-04     1.303382E-01 \n",
-      "              57     8.216089E-06     5.161802E-04     1.314211E-01 \n",
-      "              58     7.952870E-06     5.037272E-04     1.326921E-01 \n",
-      "              59     7.702148E-06     4.917693E-04     1.340749E-01 \n",
-      "              60     7.463144E-06     4.802793E-04     1.355090E-01 \n",
-      "              61     7.235136E-06     4.692319E-04     1.368060E-01 \n",
-      "              62     7.017457E-06     4.586034E-04     1.385880E-01 \n",
-      "              63     6.809492E-06     4.483720E-04     1.404200E-01 \n",
-      "              64     6.610669E-06     4.385171E-04     1.425428E-01 \n",
-      "              65     6.420459E-06     4.290195E-04     1.442792E-01 \n",
-      "              66     6.238371E-06     4.198613E-04     1.452849E-01 \n",
-      "              67     6.063947E-06     4.110257E-04     1.463959E-01 \n",
-      "              68     5.896761E-06     4.024970E-04     1.472249E-01 \n",
-      "              69     5.736419E-06     3.942604E-04     1.481690E-01 \n",
-      "              70     5.582550E-06     3.863020E-04     1.494780E-01 \n",
-      "              71     5.434810E-06     3.786089E-04     1.507752E-01 \n",
-      "              72     5.292877E-06     3.711687E-04     1.518691E-01 \n",
-      "              73     5.156450E-06     3.639700E-04     1.532800E-01 \n",
-      "              74     5.025246E-06     3.570019E-04     1.551330E-01 \n",
-      "              75     4.899003E-06     3.502541E-04     1.564093E-01 \n",
-      "              76     4.777472E-06     3.437171E-04     1.575592E-01 \n",
-      "              77     4.660422E-06     3.373816E-04     1.584740E-01 \n",
-      "              78     4.547634E-06     3.312391E-04     1.595342E-01 \n",
-      "              79     4.438903E-06     3.252814E-04     1.606159E-01 \n",
-      "              80     4.334037E-06     3.195008E-04     1.616399E-01 \n",
-      "              81     4.232854E-06     3.138900E-04     1.625521E-01 \n",
-      "              82     4.135184E-06     3.084421E-04     1.635542E-01 \n",
-      "              83     4.040865E-06     3.031505E-04     1.644380E-01 \n",
-      "              84     3.949746E-06     2.980090E-04     1.651642E-01 \n",
-      "              85     3.861683E-06     2.930117E-04     1.660812E-01 \n",
-      "              86     3.776540E-06     2.881529E-04     1.669121E-01 \n",
-      "              87     3.694190E-06     2.834274E-04     1.678522E-01 \n",
-      "              88     3.614511E-06     2.788301E-04     1.688991E-01 \n",
-      "              89     3.537390E-06     2.743562E-04     1.700969E-01 \n",
-      "              90     3.462717E-06     2.700009E-04     1.713870E-01 \n",
-      "              91     3.390390E-06     2.657601E-04     1.727200E-01 \n",
-      "              92     3.320312E-06     2.616295E-04     1.741321E-01 \n",
-      "              93     3.252389E-06     2.576050E-04     1.752369E-01 \n",
-      "              94     3.186535E-06     2.536831E-04     1.762111E-01 \n",
-      "              95     3.122665E-06     2.498599E-04     1.773741E-01 \n",
-      "              96     3.060702E-06     2.461321E-04     1.782091E-01 \n",
-      "              97     3.000569E-06     2.424964E-04     1.789770E-01 \n",
-      "              98     2.942195E-06     2.389495E-04     1.799800E-01 \n",
-      "              99     2.885513E-06     2.354885E-04     1.807430E-01 \n",
-      "             100     2.830456E-06     2.321105E-04     1.814842E-01 \n",
+      "               0     1.620000E-02     1.527351E-01     4.887581E-05 \n",
+      "               1     2.717909E-03     4.003858E-02     1.588106E-03 \n",
+      "               2     1.435827E-03     2.481013E-02     3.699064E-03 \n",
+      "               3     9.123600E-04     1.765742E-02     5.273819E-03 \n",
+      "               4     6.383038E-04     1.350744E-02     7.170200E-03 \n",
+      "               5     4.744946E-04     1.081374E-02     8.621216E-03 \n",
+      "               6     3.679275E-04     8.935609E-03     9.970903E-03 \n",
+      "               7     2.943483E-04     7.558728E-03     1.141405E-02 \n",
+      "               8     2.412398E-04     6.510874E-03     1.276493E-02 \n",
+      "               9     2.015609E-04     5.689934E-03     1.388383E-02 \n",
+      "              10     1.710840E-04     5.031639E-03     1.469803E-02 \n",
+      "              11     1.471372E-04     4.493599E-03     1.578903E-02 \n",
+      "              12     1.279604E-04     4.046775E-03     1.653790E-02 \n",
+      "              13     1.123533E-04     3.670640E-03     1.776481E-02 \n",
+      "              14     9.947358E-05     3.350297E-03     1.889205E-02 \n",
+      "              15     8.871518E-05     3.074687E-03     2.021503E-02 \n",
+      "              16     7.963259E-05     2.835441E-03     2.133799E-02 \n",
+      "              17     7.189216E-05     2.626114E-03     2.260685E-02 \n",
+      "              18     6.523983E-05     2.441671E-03     2.411914E-02 \n",
+      "              19     5.947928E-05     2.278121E-03     2.544498E-02 \n",
+      "              20     5.445680E-05     2.132267E-03     2.650809E-02 \n",
+      "              21     5.005061E-05     2.001518E-03     2.751589E-02 \n",
+      "              22     4.616319E-05     1.883755E-03     2.858901E-02 \n",
+      "              23     4.271564E-05     1.777226E-03     2.980399E-02 \n",
+      "              24     3.964361E-05     1.680476E-03     3.096604E-02 \n",
+      "              25     3.689416E-05     1.592285E-03     3.239393E-02 \n",
+      "              26     3.442338E-05     1.511620E-03     3.382301E-02 \n",
+      "              27     3.219464E-05     1.437607E-03     3.501081E-02 \n",
+      "              28     3.017715E-05     1.369497E-03     3.603792E-02 \n",
+      "              29     2.834488E-05     1.306648E-03     3.738189E-02 \n",
+      "              30     2.667573E-05     1.248504E-03     3.810787E-02 \n",
+      "              31     2.515080E-05     1.194583E-03     3.892899E-02 \n",
+      "              32     2.375385E-05     1.144466E-03     4.015899E-02 \n",
+      "              33     2.247088E-05     1.097786E-03     4.137397E-02 \n",
+      "              34     2.128977E-05     1.054219E-03     4.223108E-02 \n",
+      "              35     2.019996E-05     1.013480E-03     4.300499E-02 \n",
+      "              36     1.919224E-05     9.753190E-04     4.374886E-02 \n",
+      "              37     1.825852E-05     9.395107E-04     4.476690E-02 \n",
+      "              38     1.739172E-05     9.058564E-04     4.572487E-02 \n",
+      "              39     1.658555E-05     8.741779E-04     4.668283E-02 \n",
+      "              40     1.583446E-05     8.443159E-04     4.739475E-02 \n",
+      "              41     1.513354E-05     8.161272E-04     4.807186E-02 \n",
+      "              42     1.447839E-05     7.894827E-04     4.876184E-02 \n",
+      "              43     1.386509E-05     7.642661E-04     4.971504E-02 \n",
+      "              44     1.329015E-05     7.403720E-04     5.043101E-02 \n",
+      "              45     1.275042E-05     7.177050E-04     5.131292E-02 \n",
+      "              46     1.224307E-05     6.961781E-04     5.240512E-02 \n",
+      "              47     1.176556E-05     6.757124E-04     5.322909E-02 \n",
+      "              48     1.131557E-05     6.562357E-04     5.398798E-02 \n",
+      "              49     1.089103E-05     6.376822E-04     5.472398E-02 \n",
+      "              50     1.049005E-05     6.199915E-04     5.543089E-02 \n",
+      "              51     1.011091E-05     6.031083E-04     5.612707E-02 \n",
+      "              52     9.752052E-06     5.869816E-04     5.683208E-02 \n",
+      "              53     9.412042E-06     5.715647E-04     5.788302E-02 \n",
+      "              54     9.089584E-06     5.568144E-04     5.874395E-02 \n",
+      "              55     8.783485E-06     5.426910E-04     5.954790E-02 \n",
+      "              56     8.492654E-06     5.291576E-04     6.026506E-02 \n",
+      "              57     8.216089E-06     5.161802E-04     6.108809E-02 \n",
+      "              58     7.952870E-06     5.037272E-04     6.198883E-02 \n",
+      "              59     7.702148E-06     4.917693E-04     6.276679E-02 \n",
+      "              60     7.463144E-06     4.802793E-04     6.363916E-02 \n",
+      "              61     7.235136E-06     4.692319E-04     6.436896E-02 \n",
+      "              62     7.017457E-06     4.586034E-04     6.541491E-02 \n",
+      "              63     6.809492E-06     4.483720E-04     6.631994E-02 \n",
+      "              64     6.610669E-06     4.385171E-04     6.764793E-02 \n",
+      "              65     6.420459E-06     4.290195E-04     6.868887E-02 \n",
+      "              66     6.238371E-06     4.198613E-04     6.972289E-02 \n",
+      "              67     6.063947E-06     4.110257E-04     7.077575E-02 \n",
+      "              68     5.896761E-06     4.024970E-04     7.149005E-02 \n",
+      "              69     5.736419E-06     3.942604E-04     7.217598E-02 \n",
+      "              70     5.582550E-06     3.863020E-04     7.286787E-02 \n",
+      "              71     5.434810E-06     3.786089E-04     7.358384E-02 \n",
+      "              72     5.292877E-06     3.711687E-04     7.430983E-02 \n",
+      "              73     5.156450E-06     3.639700E-04     7.505322E-02 \n",
+      "              74     5.025246E-06     3.570019E-04     7.602692E-02 \n",
+      "              75     4.899003E-06     3.502541E-04     7.674098E-02 \n",
+      "              76     4.777472E-06     3.437171E-04     7.743597E-02 \n",
+      "              77     4.660422E-06     3.373816E-04     7.841587E-02 \n",
+      "              78     4.547634E-06     3.312391E-04     7.923412E-02 \n",
+      "              79     4.438903E-06     3.252814E-04     8.003402E-02 \n",
+      "              80     4.334037E-06     3.195008E-04     8.080101E-02 \n",
+      "              81     4.232854E-06     3.138900E-04     8.173490E-02 \n",
+      "              82     4.135184E-06     3.084421E-04     8.277893E-02 \n",
+      "              83     4.040865E-06     3.031505E-04     8.374786E-02 \n",
+      "              84     3.949746E-06     2.980090E-04     8.484793E-02 \n",
+      "              85     3.861683E-06     2.930117E-04     8.596516E-02 \n",
+      "              86     3.776540E-06     2.881529E-04     8.690095E-02 \n",
+      "              87     3.694190E-06     2.834274E-04     8.805299E-02 \n",
+      "              88     3.614511E-06     2.788301E-04     8.960891E-02 \n",
+      "              89     3.537390E-06     2.743562E-04     9.078503E-02 \n",
+      "              90     3.462717E-06     2.700009E-04     9.186792E-02 \n",
+      "              91     3.390390E-06     2.657601E-04     9.298301E-02 \n",
+      "              92     3.320312E-06     2.616295E-04     9.416103E-02 \n",
+      "              93     3.252389E-06     2.576050E-04     9.527302E-02 \n",
+      "              94     3.186535E-06     2.536831E-04     9.636402E-02 \n",
+      "              95     3.122665E-06     2.498599E-04     9.766793E-02 \n",
+      "              96     3.060702E-06     2.461321E-04     9.877610E-02 \n",
+      "              97     3.000569E-06     2.424964E-04     9.982014E-02 \n",
+      "              98     2.942195E-06     2.389495E-04     1.011560E-01 \n",
+      "              99     2.885513E-06     2.354885E-04     1.023400E-01 \n",
+      "             100     2.830456E-06     2.321105E-04     1.035700E-01 \n",
       "====================================================================\n",
       "\n",
       "\n",
       "100\n",
       "[0.03449107 0.03449107]\n",
-      "0.18148422241210938\n",
+      "0.10466408729553223\n",
       "2.830456199167557e-06\n",
       "0.00023211051832047348\n"
      ]
@@ -387,11 +394,11 @@
     "# verify it with the print_results() above\n",
     "\n",
     "print('\\n')\n",
-    "print(optimizer.outputs['itr'][-1])\n",
-    "print(optimizer.outputs['x'][-1])\n",
-    "print(optimizer.outputs['time'][-1])\n",
-    "print(optimizer.outputs['obj'][-1])\n",
-    "print(optimizer.outputs['opt'][-1])"
+    "print(optimizer.results['itr'])\n",
+    "print(optimizer.results['x'])\n",
+    "print(optimizer.results['time'])\n",
+    "print(optimizer.results['obj'])\n",
+    "print(optimizer.results['opt'])"
    ]
   }
  ],
